--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
+		"@hapi/accept": "^6.0.1",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
@@ -21,8 +22,10 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
+		"is-animated": "^2.0.2",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"send": "^0.18.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
@@ -31,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"sharp": "^0.32.1",
 		"sveltekit-image": "^0.5.13"
 	}
 }
